[tool.poetry]
name = "password"
version = "0.1.0"
description = "Makes secure passwords"
authors = ["Weston Gorczyca <weston.gorczyca@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
